--- a/app.json
+++ b/app.json
@@ -3,6 +3,9 @@
     "index/index/index",
     "goodsclass/index/index",
     "pro_detail/index/index",
+     "cart/cart",
+    "orders/orders",
+    "address/address",
     "company/index/index",
     "info/index/index",
     "pages/index/index",
